...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_weight="3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/username"
                        style="@style/CustomAliceEditText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginHorizontal="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:background="@drawable/changepass_background"
...
                        android:textSize="@dimen/_10ssp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/gradientTextView" />

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/password"
                        style="@style/CustomAliceEditText"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginHorizontal="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/changepass_background"
...
                        android:textStyle="normal"
                        app:layout_constraintEnd_toEndOf="@+id/password"
                        app:layout_constraintTop_toBottomOf="@+id/password" />


                    <LinearLayout
                        android:id="@+id/loginButton"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginHorizontal="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/gradient_background"
                        android:onClick="@{v ->vm.onClick(v)}"
...
